--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
 spring.application.name=transaction-service
+
+spring.data.mongodb.uri=mongodb+srv://carolanac40_db_user:NVAWRI2Y52xjIzRb@ac-owmex2p-shard-00-00.co216t4.mongodb.net/transacao-db?retryWrites=true&w=majority&appName=Cluster0
+spring.data.mongodb.auto-index-creation=true
