feat: buscas personalizadas no repository

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,8 @@
 spring.application.name=transaction-service
 
+server.port=8081
+
+services.account.url=${SERVICES_ACCOUNT_URL:http://localhost:8080}
+
 spring.data.mongodb.uri=mongodb+srv://carolanac40_db_user:NVAWRI2Y52xjIzRb@ac-owmex2p-shard-00-00.co216t4.mongodb.net/transacao-db?retryWrites=true&w=majority&appName=Cluster0
 spring.data.mongodb.auto-index-creation=true
