feat: Implementando configuracao kafka

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,10 @@
 /gradlew text eol=lf
 *.bat text eol=crlf
 *.jar binary
+* text=auto
+*.java text eol=lf
+*.yml text eol=lf
+*.yaml text eol=lf
+*.properties text eol=lf
+*.sh text eol=lf
+*.bat text eol=crlf
