--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,26 @@
 spring.application.name=transaction-service
-
 server.port=8081
 
 services.account.url=${SERVICES_ACCOUNT_URL:http://localhost:8080}
 
 spring.data.mongodb.uri=mongodb+srv://carolanac40_db_user:NVAWRI2Y52xjIzRb@ac-owmex2p-shard-00-00.co216t4.mongodb.net/transacao-db?retryWrites=true&w=majority&appName=Cluster0
 spring.data.mongodb.auto-index-creation=true
+
+# Kafka Configuration
+spring.kafka.bootstrap-servers=localhost:9092
+
+# Producer Configuration
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.properties.spring.json.add.type.headers=false
+
+# RabbitMQ
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=myuser
+spring.rabbitmq.password=secret
+
+# Logging para debug
+logging.level.org.springframework.kafka=INFO
+logging.level.org.apache.kafka=WARN
+logging.level.com.example.transaction=DEBUG
