--- a/application.yaml
+++ b/application.yaml
@@ -1,5 +1,13 @@
 spring:
 
+  cloud:
+    stream:
+      bindings:
+        transaction-created-out-0:
+          destination: exchange.transaction.events
+        warning-limit-out-0:
+          destination: exchange.limit.alerts
+
   application:
     name: transaction_service
   # Configuração do MongoDB
