--- a/build.gradle
+++ b/build.gradle
@@ -24,8 +24,17 @@ repositories {
 	mavenCentral()
 }
 
+dependencyManagement {
+    imports {
+        // Spring Cloud 2024.x é o ciclo compatível com Spring Boot 3.5.x
+        mavenBom "org.springframework.cloud:spring-cloud-dependencies:2024.0.0"
+    }
+}
+
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-amqp'
+    implementation 'org.springframework.cloud:spring-cloud-stream'
+    implementation 'org.springframework.cloud:spring-cloud-stream-binder-rabbit'
 	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-webflux'
